[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/more_breakout_pieces.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Bricks/Brick.gd" type="Script" id=2]



[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( 0.0125332, -3.24587 )
b = Vector2( 0.0125332, 12.7387 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 0.01507, 16.011 )

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( 0, -37.9835 )
b = Vector2( 0, 10 )

[node name="Brick" type="Sprite"]

position = Vector2( 611.413, 130.14 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 208, 160, 48, 16 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="BrickSides" type="Area2D" parent="." index="0"]

position = Vector2( 0.0565605, -0.033865 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BrickSides" index="0"]

position = Vector2( -22.5862, -4.72027 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BrickSides" index="1"]

position = Vector2( 22.43, -7.98593 )
shape = SubResource( 2 )

[node name="BrickTopBottom" type="Area2D" parent="." index="1"]

position = Vector2( 0, -0.0248942 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BrickTopBottom" index="0"]

position = Vector2( -13.9982, -6.5132 )
rotation = 1.5708
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BrickTopBottom" index="1"]

position = Vector2( -13.9982, 6.52838 )
rotation = 1.5708
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="BrickSides" to="." method="_on_BrickSides_area_entered"]

[connection signal="area_entered" from="BrickTopBottom" to="." method="_on_BrickTopBottom_area_entered"]


